--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -9,6 +9,15 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+
+      >div {
+        display: flex;
+        gap: 16px;
+        
+        button {
+          height: 40px;
+        }
+      }
       
       > img{
         max-height: 45px;
@@ -93,6 +102,11 @@
           }
         }
       }
+    }
+
+    .question-list {
+      margin-top: 32px;
+      padding-bottom: 32px;
     }
   }
 }
