--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -60,7 +60,7 @@
     }
     form {
       input{
-        width: calc(100% - 32px);
+        width: 100%;
         height: 50px;
         border-radius: 8px;
         padding: 0 16px;
