--- a/src/components/RoomCode/style.scss
+++ b/src/components/RoomCode/style.scss
@@ -22,8 +22,8 @@
     display: block;
     align-self: center;
     flex: 1;
-    padding: 0x 16px 0 12px;
-    width: 240px;
+    padding: 0px 16px 0 12px;
+    width: fit-content;
     font-size: 14px;
     font-weight: 500;
   }
